--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
     "@types/bun": "latest",
+    "serve": "^14.2.1",
     "tailwindcss": "^3.4.1"
   },
   "peerDependencies": {
